--- a/styler.css
+++ b/styler.css
@@ -31,6 +31,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   justify-content: center;
+  overflow-x: hidden;
 }
 
 /* Menu */
@@ -40,8 +41,7 @@ body {
 }
 
 nav {
-  margin-left: 8.5rem;
-  margin-right: 9.56rem;
+  margin-left: 7.5rem;
   
 }
 
@@ -54,25 +54,19 @@ nav {
 .logo {
   font: 700 35px "Poppins", sans-serif;
   color: var(--white);
-  white-space: nowrap;
-  margin-top: 3.93rem;
+  margin-top: 2.93rem;
   margin-bottom: 2.25rem;
+  margin-right: 11.50rem;
 }
 .logo span{
   color: var(--green);
  
 }
 
-.container {
-  margin-right: 9.56rem;
-  margin-left: 11.50rem;
-}
-
 .flex-item {
   font: 400 18px "Roboto", sans-serif;
   color: var(--light-purple);
-  justify-content: space-around;
-  margin-left: 2rem;
+  margin-right: 2rem;
   margin-top: 4.43rem;
   margin-bottom: 4rem;
 }
@@ -83,14 +77,12 @@ nav {
   width: 14.34rem;
   height: 2.75rem;
   padding: 0.625rem 1.43rem;
-  margin-right: 0;
   color: var(--white);
-  border: none;
- 
+  margin-left: 9.56rem;
 }
 
 .search-button {
-  
+ 
   margin-top: 3.68rem;
   margin-bottom: 4rem;
 }
@@ -98,22 +90,15 @@ nav {
 button {
   background: var(--button-bg);
   padding: 0.5rem 1.43rem;
-  margin-right: 0.625rem;
   border: none;
   border-radius: 0 0.187rem 0.187rem 0;
-  margin-left: 0;
-  width: 4.375rem;
-  height: 2.75rem;
 }
-button > img {
-  width: 1.5rem;
-  height: 1.5rem;
-}
+
 /* Home */
 .section {
   background: var(--purple-bg);
   display: flex; 
-  height: 34.812rem;
+  height: 29.812rem;
 }
 
 .text-group {
@@ -158,7 +143,6 @@ h1 {
 
 .section-two {
   width: 90.062rem;
-  margin-right: 8.5rem;
   margin-left: 8.37rem;
   display: flex;
   color: var(--light-purple);
@@ -191,7 +175,6 @@ h2 {
 h3 {
   font: 400 16px "Roboto", sans-serif;
   color:#000000;
-  margin-top: 0.998rem;
 }
 
 .p-post {
@@ -209,8 +192,6 @@ h3 {
 }
 
 .section-three {
-  width: 90.062rem;
-  margin-right: 8.880rem;
   margin-left: 8.37rem;
   margin-bottom: 3.973rem;
   display: flex;
